# gpx-dashboard

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_enrichment.yml  data_ingestion.yml  data_modeling.yml
conf/local/: credentials.yml
dags/: data_enrichment.py  data_enrichment_dag.py  feature_engineering_dag.py  ingestion_dag.py
data/.minio.sys/: format.json
data/01_raw/: 03-Mar-2023-1714.gpx  18-Mar-2023-1213.gpx  18-Mar-2023-1809Scy.gpx  18-Mar-2023-1826.gpx  19-Mar-2023-1822.gpx  19-Mar-2023-2155.gpx  19-mar.-2023-1712.gpx  20-Mar-2023-1827.gpx  20-Mar-2023-2106.gpx  2023-03-18_Mar_18,_2023_5_54_26_PM.gpx  2023-03-19_Mar_19,_2023_3_17_31_PM.gpx  22-Mar-2023-0749.gpx  22-Mar-2023-1811.gpx
docs/source/: conf.py  index.rst
notebooks/: Untitled.ipynb  Untitled1.ipynb  c-get_distance.ipynb  c-get_elapsed_time.ipynb
src/: requirements.txt  setup.py
src/gpx_dashboard/: __init__.py  __main__.py  settings.py
src/gpx_dashboard/pipelines/data_enrichment/: README.md  __init__.py  nodes.py  pipeline.py
src/gpx_dashboard/pipelines/data_ingestion/: README.md  __init__.py  nodes.py  pipeline.py
src/gpx_dashboard/pipelines/data_modeling/: README.md  __init__.py  nodes.py  pipeline.py
src/gpx_dashboard/pipelines/feature_engineering/: nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_enrichment/: nodes_test.py  test_pipeline.py
src/tests/pipelines/data_ingestion/: test_pipeline.py
(+11 files in other folders)
