[tool.kedro]
package_name = "gpx_dashboard"
project_name = "gpx-dashboard"
kedro_init_version = "0.18.6"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/gpx_dashboard -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "gpx-dashboard"
version = "0.1.0"
description = ""
authors = ["cdanmontoya <camontoyah@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
gpxpy = "^1.5.0"
kedro = "^0.18.6"
geopy = "^2.3.0"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
kedro-viz = "^5.3.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
